--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -13,30 +13,30 @@
 
 </head>
 <body>
-        <header>
-            <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-            <nav>
-                <ul>
-                    <li><a href="../index.html#portfolio">projets</a></li>
-                    <li><a href="../index.html#contact">contact</a></li>
-                    <li><a href="login.html">login</a></li>
-                    <li><img src="icons/icons8-instagram 1.png" alt="Instagram"></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section id="login">
-                <h2>Log in</h2>
-                <form action="#" method="post" class="login-form">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
-                    <label for="password">Mot de passe</label>
-                    <input type="password" name="password" id="password">
-                    <input type="submit" value="Envoyer">
-                </form>
-                <p><a href="#">Mot de passe oublié</a></p>
-            </section>
-        </main>
+    <header>
+        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        <nav>
+            <ul>
+                <li><a href="../index.html#portfolio">projets</a></li>
+                <li><a href="../index.html#contact">contact</a></li>
+                <li><a href="login.html">login</a></li>
+                <li><img src="icons/icons8-instagram 1.png" alt="Instagram"></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="login">
+            <h2>Log in</h2>
+            <form action="#" method="post" class="login-form">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" class="email">
+                <label for="password">Mot de passe</label>
+                <input type="password" name="password" id="password" class="password">
+                <input type="submit" value="Envoyer">
+            </form>
+            <p><a href="#">Mot de passe oublié</a></p>
+        </section>
+    </main>
     <footer>
         <nav>
             <ul>
