--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,13 +13,14 @@
 
 </head>
 <body>
+	<div class="bandEditionContaineur"></div>
 	<header>
 		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		<nav>
 			<ul>
 				<li><a href="#portfolio">projets</a></li>
 				<li><a href="#contact">contact</a></li>
-				<li><a href="./assets/login.html">login</a></li>
+				<li><a href="./assets/login.html" class="logout">login</a></li>
 				<li><img src="./assets/icons/icons8-instagram 1.png" alt="Instagram"></li>
 			</ul>
 		</nav>
@@ -37,7 +38,8 @@
 			</article>
 		</section>
 		<section id="portfolio">
-			<h2>Mes Projets</h2>
+			<h2>Mes projets</h2>
+			<div class="modifications"></div>
 			<div class="filters">
 			</div>
 			<div class="gallery">
