--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -10,7 +10,6 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="login.css">
 	<script type="module" src="login.js" defer></script>
-
 </head>
 <body>
     <header>
@@ -33,6 +32,7 @@
                 <label for="password">Mot de passe</label>
                 <input type="password" name="password" id="password" class="password">
                 <input type="submit" value="Envoyer">
+                <p class="error-message"></p>
             </form>
             <p><a href="#">Mot de passe oublié</a></p>
         </section>
