--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-	<div class="bandEditionContaineur"></div>
+	<div class="banner-edit-containeur"></div>
 	<header>
 		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		<nav>
@@ -39,7 +39,7 @@
 		</section>
 		<section id="portfolio">
 			<h2>Mes projets</h2>
-			<div class="modifications"></div>
+			<div class="edits"></div>
 			<div class="filters">
 			</div>
 			<div class="gallery">
