--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="banner-edit-containeur"></div>
 	<header>
-		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+		<h1><a href="index.html">Sophie Bluel<span>Architecte d'intérieur</span></a></h1>
 		<nav>
 			<ul>
 				<li><a href="#portfolio">projets</a></li>
