feat: add first modal with html and css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -45,6 +45,17 @@
 			<div class="gallery">
 			</div>
 		</section>
+		<aside id="modal" class="modal">
+			<div class="modal-gallery">
+				<a href=""><img src="./assets/icons/close-cross.png" alt="croix pour fermer" class="close-cross-icon"></a>
+				<h3>Galerie photo</h3>
+				<div class="modal-gallery-photos">
+				
+				</div>
+				<a href=""><button>Ajouter une photo</button></a>
+			</div>
+
+		</aside>
 		<section id="contact">
 			<h2>Contact</h2>
 			<p>Vous avez un projet ? Discutons-en !</p>
