--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -45,12 +45,12 @@
 			<div class="gallery">
 			</div>
 		</section>
-		<aside id="modal" class="modal">
+		<aside id="modal" class="modal" style="display:none">
 			<div class="modal-gallery">
-				<a href=""><img src="./assets/icons/close-cross.png" alt="croix pour fermer" class="close-cross-icon"></a>
+				<a href="#" class="close-cross"><img src="./assets/icons/close-cross.png" alt="croix pour fermer" class="close-cross-icon"></a>
 				<h3>Galerie photo</h3>
 				<div class="modal-gallery-photos">
-				
+					
 				</div>
 				<a href=""><button>Ajouter une photo</button></a>
 			</div>
