feat: add transfer and preview of photos

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -82,6 +82,7 @@
                 <input type="file" id="fileElem" multiple accept="image/*" class="visually-hidden" />
                 <label for="fileElem">+ Ajouter photo</label>
                 <p>jpg, png: 4mo max</p>
+                <p class="error-message"></p>
               </div>
               <div class="inputs-title-and-category">
                 <label for="title" class="title-label">Titre</label>
