feat: add conditions to validate the form

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -90,7 +90,7 @@
                 <label for="category" class="category-label">Catégorie</label>
                 <select name="category" id="category" required></select>
               </div>
-              <button type="submit">Valider</button>
+              <button type="submit" class="validate-btn">Valider</button>
             </form>
           </div>
         </div>
