--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="login.css">
-	<script type="module" src="login.js" defer></script>
+	<script type="module" src="login.js"></script>
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
                 <li><a href="../index.html#portfolio">projets</a></li>
                 <li><a href="../index.html#contact">contact</a></li>
                 <li><a href="login.html">login</a></li>
-                <li><img src="icons/icons8-instagram 1.png" alt="Instagram"></li>
+                <li><img src="icons/icons8-instagram1.png" alt="Instagram"></li>
             </ul>
         </nav>
     </header>
