--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="login.css">
+    <script src="./config.js"></script>
 	<script type="module" src="login.js"></script>
 </head>
 <body>
